test/classes/figueroa/DestructorSubclassing3.good
DestructorSubclassing3.chpl:10: syntax error: only single inheritance is supported
DestructorSubclassing3.chpl:19: syntax error: only single inheritance is supported
